--- a/video-streaming-server/package.json
+++ b/video-streaming-server/package.json
@@ -2,10 +2,10 @@
   "name": "video-streaming-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "npx nodemon index.js",
+    "start": "node ./src/index.js",
+    "start:dev": "npx nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
