--- a/azure-storage-service/package.json
+++ b/azure-storage-service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "azure-storage": "^2.10.7",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
