--- a/history-service/Dockerfile-prod
+++ b/history-service/Dockerfile-prod
@@ -1,6 +1,9 @@
 FROM node:12.18.1-alpine
+
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --only=production
 COPY ./src ./src
-CMD npm start
+
+CMD npx wait-port rabbit:5672 && \
+    npm start
