[ch5] Modify video-streaming service to produce the viewed video to RabbitMQ via the queue called viewed

--- a/video-streaming-server/Dockerfile-prod
+++ b/video-streaming-server/Dockerfile-prod
@@ -6,4 +6,5 @@ RUN npm install --only=production
 COPY ./src ./src
 COPY ./videos ./videos
 
-CMD npm start
+CMD npx wait-port rabbit:5672 && \
+    npm start
