[ch5] Add RabbitMQ container configuration to docker compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,17 @@ services:
       - "4002:27017"
     restart: always
 
+  rabbit:
+    image: rabbitmq:3.8.5-management
+    container_name: rabbit
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    expose:
+      - "5672"
+      - "15672"
+    restart: always
+
   azure-storage:
     image: azure-storage
     build:
@@ -40,6 +51,7 @@ services:
       - DBHOST=mongodb://db:27017
       - DBNAME=video-streaming
       - NODE_ENV=development
+      - RABBIT=amqp://guest:guest@rabbit:5672
     restart: "no"
 
   history:
@@ -58,4 +70,8 @@ services:
       - NODE_ENV=development
       - DBHOST=mongodb://db:27017
       - DBNAME=history
+      - RABBIT=amqp://guest:guest@rabbit:5672
+    depends_on:
+      - db
+      - rabbit
     restart: "no"
